# ltid_replication_package

./: .gitattributes  .gitignore  .gitmodules  README.md  clone_subjects.py  compare_patterns.py  count_log_stmts.py  extract_logs.py  make_log_graph.py  make_pattern_log_graph.py  make_source_log_graph.py  make_stats.py  package.py  pyproject.toml  requirements.txt  run_mvn_test.sh
experiments/: clone_subjects.py  make_log_graph.py
lib/ltid-log-graph/: .gitignore
ltid-log-graph/: pom.xml
ltid-log-graph/pkg/: pom.xml
ltid-log-graph/src/main/java/ltid/log_graph/: Counter.java  DominatorControlFlowGraph.java  Environment.java  Launcher.java  (+1 more)
ltid-log-graph/src/main/scripts/: parse
ltid-toolkit/: hatch_build.py  pyproject.toml
ltid-toolkit/src/ltid-log-graph/src/assembly/: bin.xml
ltid-toolkit/src/ltid-log-graph/src/main/java/sense/logid/: Variable.java
ltid-toolkit/src/ltid-log-graph/src/main/java/sense/logid/commands/: Gather.java
ltid-toolkit/src/ltid-log-graph/src/main/java/sense/logid/dominators/: SNCADominatorTree.java
ltid-toolkit/src/ltid-log-graph/src/main/java/sense/logid/events/: LogEvent.java
ltid-toolkit/src/ltid-log-graph/src/test/resources/anana2/sense/logid/fixtures/: WhileEmptyBody.java
ltid-toolkit/src/ltid-toolkit/: track.py
ltid-toolkit/src/ltid/toolkit/: execution.py  fuzzy_pattern_tree.py  log_graph.py  log_patterns.py  log_statement.py  parse.py  project.py  query.py  separate.py  track.py
ltid-toolkit/src/ltid_toolkit/: log_graph.py
toolkit/logid/: __init__.py
toolkit/logid/logid/: pom.xml  spoon.classpath-app.tmp
(+101 files in other folders)
