[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"

[project]
name = "ltid-toolkit"
version = "0.3.0"
authors = [{ name = "bolu61", email = "bolu61@zjc.dev" }]
dependencies = [
    "lxml",
    "pygit2",
    "pylibsrcml",
    "networkx",
    "prefixspan @ git+https://github.com/bolu61/prefixspan@main#subdirectory=bindings/python",
    "pandas",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ltid"]

[tool.hatch.metadata]
allow-direct-references = true
